<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LogIn"
    android:padding="40dp">


    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_stylecap"
        android:textAlignment="center"
        android:paddingBottom="5dp"
        android:textStyle="bold"
        android:textSize="25sp"
        />
    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/curate_your_capsule_wardrobe"
        android:textAlignment="center"
        android:paddingBottom="30dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_to_stylecap"
        android:textAlignment="center"
        android:paddingTop="10dp"/>

    <Button
        android:id="@+id/register_here_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register_here"
        android:textSize="12sp"
        android:textColor="@color/black"
        style="?android:attr/borderlessButtonStyle"
        />

</LinearLayout>