<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id = "@+id/feed_item"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="15dp"
    android:padding = "5dp"
    android:layout_margin="5dp"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageButton
            android:id="@+id/image"
            android:layout_weight=".5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image1"
            android:background="@null"
            android:contentDescription="@string/image"
            android:adjustViewBounds="true"/>

        <TextView
            android:textSize="16sp"
            android:layout_gravity="start"
            android:textStyle="bold"
            android:id="@+id/image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_of_picture"
            android:padding="10dp"
            ></TextView>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:columnCount="2"
            android:padding="5dp">
        <TextView
            android:layout_row="2"
            android:layout_columnSpan="1"
            android:layout_column="0"
            android:textSize="16sp"
            android:layout_gravity="start"
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_and_profile_pic"
            android:padding="5dp"
            ></TextView>

          <LinearLayout
              android:layout_row="2"
              android:layout_column="1"
              >


              <ImageButton
                  android:id="@+id/like_button"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:background="@null"
                  android:contentDescription="@string/like"
                  android:src="@drawable/baseline_favorite_border_24"
                  tools:ignore="TouchTargetSizeCheck" />




        <TextView
            android:id="@+id/like_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/save_like_count"
            android:textSize="16sp"></TextView>
    </LinearLayout>
</GridLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>