<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:layout_margin="10dp">

    <!-- TODO: Update blank fragment layout -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="4">


        <androidx.cardview.widget.CardView
            android:id="@+id/image_holder"
            android:layout_height="85dp"
            android:layout_width="85dp"
            android:elevation="12dp"
            app:cardCornerRadius="40dp"
            android:layout_margin="3dp"
            android:layout_row="0"

            >

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnSpan="1"
                android:contentDescription="@string/profile_image"
                android:src="@drawable/blank_profile">

            </ImageView>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="0"
                android:textSize="25sp"
                android:background="@null"/>
            <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Following"
                android:textSize="12sp"
                android:layout_gravity="center"
                />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/follower_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="0"
                android:textSize="25sp"
                android:background="@null"/>
            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Followers"
                android:textSize="12sp"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/likes_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="0"
                android:textSize="25sp"
                android:background="@null"/>
            <TextView
                android:id="@+id/likes_and_saves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Likes/Saves"
                android:textSize="12sp"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bio"
            android:layout_column="0"
            android:layout_row="3"
           />

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:text="@string/username_display"
            >

        </TextView>

        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:text="Edit Profile" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="4">

            <ImageButton
                android:id="@+id/feed"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/feed_button"
                android:src="@drawable/outline_dashboard_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bookmarks"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@null"
                />

            <ImageButton
                android:id="@+id/bookmarks"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/bookmarks_button"
                android:src="@drawable/outline_bookmarks_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/likes"
                app:layout_constraintStart_toEndOf="@+id/feed"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@null"/>

            <ImageButton
                android:id="@+id/likes"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/likes_button"
                android:src="@drawable/baseline_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/bookmarks"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@null"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_columnSpan="4"
            android:layout_row="6"
            android:layout_column="0"/>
    </GridLayout>




</FrameLayout>